tests/baselines/reference/parserUnfinishedTypeNameBeforeKeyword1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.ts(1,8): error TS2552: Cannot find name 'TypeModule1'. Did you mean 'TypeModule2'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.ts(1,20): error TS1003: Identifier expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnfinishedTypeNameBeforeKeyword1.ts (2 errors) ====
    var x: TypeModule1.
           ~~~~~~~~~~~
!!! error TS2552: Cannot find name 'TypeModule1'. Did you mean 'TypeModule2'?
                       
!!! error TS1003: Identifier expected.
    module TypeModule2 {
    }
    